# amaze-d

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  demo.sh  run_tests.sh
include/: amaze.h  visual.h
src/: main.c
src/core/: engine.c  pathfinding.c  room.c
src/parser/: cleanup.c  parser.c
src/utils/: io.c  string.c
src/visual/: display.c  stats.c
tests/: test2.txt  test3.txt  test_complex.txt  test_simple.txt
